<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <PreferenceCategory
        android:title="@string/coloring_header"
        android:key="color">
    </PreferenceCategory>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="backColor"
        android:title="@string/backColor_title"
        android:summary="@string/backColor_summary"
        android:defaultValue="@color/colorAccent"
        alphaSlider="true"
        />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="buttonColor"
        android:title="@string/buttonColor_title"
        android:summary="@string/buttonColor_summary"
        android:defaultValue="@color/colorAccent"
        alphaSlider="true"
        />
</PreferenceScreen>
